# pycore

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
docs/: COMPONENTS.md  CONVENTIONS.md  DESIGN.md  INIT_GUIDE.md
src/pycore/: __init__.py  _main.py  callback.py  cli.py  concurrent.py  config.py  constants.py  errors.py  http.py  init.py  log.py  notify.py  registry.py  result.py  retry.py
tests/: test_core.py
